Styled Sanity Studio and deleted unnecessary widgets, fix styles in Button component. Implemented Persona component for band members list. Hooked up expanding and collapsing, working version only

--- a/studio/plugins/dashboard-widget-structure-menu/src/components/StructureMenuWidget.css
+++ b/studio/plugins/dashboard-widget-structure-menu/src/components/StructureMenuWidget.css
@@ -2,10 +2,13 @@
 
 .root {
   composes: container from "part:@sanity/dashboard/widget-styles";
+  outline: 2px solid #2276fc;
+  outline-offset: -6px;
 }
 
 .header {
   composes: header from "part:@sanity/dashboard/widget-styles";
+  
 }
 
 .title {
