--- a/web/src/components/typography/styles.scss
+++ b/web/src/components/typography/styles.scss
@@ -101,6 +101,7 @@ mark {
 
 
 .Heading {
+  margin: 1rem 0;
   &.caps {
     text-transform: uppercase;
     font-weight: 400;
