--- a/web/src/styles/layout.scss
+++ b/web/src/styles/layout.scss
@@ -42,6 +42,7 @@ h4,
 h5,
 h6 {
   font-family: var(--font-family-sans);
+  margin: 0;
 }
 button {
   border: none;
